End Project Section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="project-item">
                         <div class="project-info">
                             <h1>project 1</h1>
-                            <h2>Coding is Love</h2>
+                            <h2>Coding is Love it</h2>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis quidem nobis enim sequi vitae reprehenderit 
                                 dignissimos sapiente possimus accusantium. Nesciunt totam reprehenderit eaque doloribus, 
                                 ut neque nam consequuntur labore explicabo?</p>
