Add About Section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- end Hero section -->
 
     <!-- service section -->
-    <div id="services">
+    <section id="services">
         <div class="services container">
             <div class="service-top">
                 <h1 class="section-title">Serv<span>i</span>ces</h1>
@@ -85,33 +85,57 @@
                 </div>
             </div>
         </div>
-        <!-- end service section -->
+    </section>
+    <!-- end service section -->
 
-        <!-- project section -->
-        <div id="projects">
-            <div class="projects container">
-                <div class="projects-header">
-                    <div class="section-title">
-                        Recent <span>projects</span>
-                    </div>
+    <!-- project section -->
+    <section id="projects">
+        <div class="projects container">
+            <div class="projects-header">
+                <div class="section-title">
+                    Recent <span>projects</span>
                 </div>
-                <div class="all-projects">
-                    <div class="project-item">
-                        <div class="project-info">
-                            <h1>project 1</h1>
-                            <h2>Coding is Love it</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis quidem nobis enim sequi vitae reprehenderit 
-                                dignissimos sapiente possimus accusantium. Nesciunt totam reprehenderit eaque doloribus, 
-                                ut neque nam consequuntur labore explicabo?</p>
-                        </div>
-                        <div class="project-img">
-                            <img src="./assets/image/giant-building-with-sun.jpg" />
-                        </div>
+            </div>
+            <div class="all-projects">
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>project 1</h1>
+                        <h2>Coding is Love it</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis quidem nobis enim
+                            sequi vitae reprehenderit
+                            dignissimos sapiente possimus accusantium. Nesciunt totam reprehenderit eaque doloribus,
+                            ut neque nam consequuntur labore explicabo?</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="./assets/image/giant-building-with-sun.jpg" />
                     </div>
                 </div>
             </div>
         </div>
-        <!-- End Project Section -->
+    </section>
+    <!-- End Project Section -->
+
+    <!-- About section -->
+    <section id="about">
+        <div class="about container">
+            <div class="col-left">
+                <div class="about-img">
+                    <img src="./assets/image/waist-up-portrait-handsome-serious-unshaven-male-keeps-hands-together-dressed-dark-blue-shirt-has-talk-with-interlocutor-stands-against-white-wall-self-confident-man-freelancer.jpg" />
+                </div>
+            </div>
+            <div class="col-right">
+                <h1 class="section-title">about <span>me</span></h1>
+                <h2>front end developer</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Nostrum totam repudiandae odio sunt voluptate quaerat perferendis nesciunt cupiditate. 
+                    Quisquam non dignissimos alias praesentium laboriosam. Eum sequi nihil iste dolorem quae?
+                </p>
+                <a class="cta" href="#">Download Resume</a>
+            </div>
+        </div>
+    </section>
+    <!-- End About Section -->
 </body>
 
 </html>
