--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section id="about">
         <div class="about container">
             <div class="col-left">
-                <div class="about-img">
+                <div class="about-img ">
                     <img src="./assets/image/waist-up-portrait-handsome-serious-unshaven-male-keeps-hands-together-dressed-dark-blue-shirt-has-talk-with-interlocutor-stands-against-white-wall-self-confident-man-freelancer.jpg" />
                 </div>
             </div>
@@ -136,6 +136,42 @@
         </div>
     </section>
     <!-- End About Section -->
+
+    <!-- contact Section -->
+    <section id="contact">
+        <div class="contact container">
+            <div>
+                <h1 class="section-title" >contact <span>info</span></h1>
+            </div>
+            <div class="contact-items">
+                <div class="contact-item">
+                    <div class="icon"><img src="./assets/image/icons8-phone-50.png" /> </div>
+                    <div class="contact-info">
+                        <h1>contact</h1>
+                        <h2>+62 111 2345 6789 </h2>
+                        <h2>+62 111 2345 6789 </h2>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <div class="icon"><img src="./assets/image/icons8-mail-50.png" /> </div>
+                    <div class="contact-info">
+                        <h1>email</h1>
+                        <h2>+62 111 2345 6789 </h2>
+                        <h2>+62 111 2345 6789 </h2>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <div class="icon"><img src="./assets/image/icons8-address-50.png" /> </div>
+                    <div class="contact-info">
+                        <h1>address</h1>
+                        <h2>+62 111 2345 6789 </h2>
+                        <h2>+62 111 2345 6789 </h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Contact Section -->
 </body>
 
 </html>
