--- a/index.html
+++ b/index.html
@@ -120,15 +120,16 @@
         <div class="about container">
             <div class="col-left">
                 <div class="about-img ">
-                    <img src="./assets/image/waist-up-portrait-handsome-serious-unshaven-male-keeps-hands-together-dressed-dark-blue-shirt-has-talk-with-interlocutor-stands-against-white-wall-self-confident-man-freelancer.jpg" />
+                    <img
+                        src="./assets/image/waist-up-portrait-handsome-serious-unshaven-male-keeps-hands-together-dressed-dark-blue-shirt-has-talk-with-interlocutor-stands-against-white-wall-self-confident-man-freelancer.jpg" />
                 </div>
             </div>
             <div class="col-right">
                 <h1 class="section-title">about <span>me</span></h1>
                 <h2>front end developer</h2>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Nostrum totam repudiandae odio sunt voluptate quaerat perferendis nesciunt cupiditate. 
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Nostrum totam repudiandae odio sunt voluptate quaerat perferendis nesciunt cupiditate.
                     Quisquam non dignissimos alias praesentium laboriosam. Eum sequi nihil iste dolorem quae?
                 </p>
                 <a class="cta" href="#">Download Resume</a>
@@ -141,7 +142,7 @@
     <section id="contact">
         <div class="contact container">
             <div>
-                <h1 class="section-title" >contact <span>info</span></h1>
+                <h1 class="section-title">contact <span>info</span></h1>
             </div>
             <div class="contact-items">
                 <div class="contact-item">
@@ -172,6 +173,29 @@
         </div>
     </section>
     <!-- End Contact Section -->
+
+    <!-- footer -->
+    <section id="footer">
+        <div class="footer container">
+            <div class="brand">
+                <h1><span>L</span> O <span>G</span> O</h1>
+                <h2>Your Complete Web Solution</h2>
+            </div>
+            <div class="social-icon">
+                <div class="social-item">
+                    <a href="#"><img src="./assets/image/icons8-facebook-50.png" /> </a>
+                </div>
+                <div class="social-item">
+                    <a href="#"><img src="./assets/image/icons8-instagram-50.png" /> </a>
+                </div>
+                <div class="social-item">
+                    <a href="#"><img src="./assets/image/icons8-twitter-circled-50.png" /> </a>
+                </div>
+            </div>
+            <p>Copyright &copy; 2022 LOGO. All rights reverved</p>
+        </div>
+    </section>
+    <!-- end footer -->
 </body>
 
 </html>
