--- a/index.html
+++ b/index.html
@@ -110,6 +110,19 @@
                         <img src="./assets/image/giant-building-with-sun.jpg" />
                     </div>
                 </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>project 1</h1>
+                        <h2>Coding is Love it</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis quidem nobis enim
+                            sequi vitae reprehenderit
+                            dignissimos sapiente possimus accusantium. Nesciunt totam reprehenderit eaque doloribus,
+                            ut neque nam consequuntur labore explicabo?</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="./assets/image/giant-building-with-sun.jpg" />
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -178,7 +191,7 @@
     <section id="footer">
         <div class="footer container">
             <div class="brand">
-                <h1><span>L</span> O <span>G</span> O</h1>
+                <h1><span>l</span> o <span>g</span> o</h1>
                 <h2>Your Complete Web Solution</h2>
             </div>
             <div class="social-icon">
