--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             ut neque nam consequuntur labore explicabo?</p>
                     </div>
                     <div class="project-img">
-                        <img src="./assets/image/giant-building-with-sun.jpg" />
+                        <img src="./assets/image/giant-building-with-sun.webp" />
                     </div>
                 </div>
                 <div class="project-item">
@@ -120,7 +120,7 @@
                             ut neque nam consequuntur labore explicabo?</p>
                     </div>
                     <div class="project-img">
-                        <img src="./assets/image/giant-building-with-sun.jpg" />
+                        <img src="./assets/image/giant-building-with-sun.webp" />
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
             <div class="col-left">
                 <div class="about-img ">
                     <img
-                        src="./assets/image/waist-up-portrait-handsome-serious-unshaven-male-keeps-hands-together-dressed-dark-blue-shirt-has-talk-with-interlocutor-stands-against-white-wall-self-confident-man-freelancer.jpg" />
+                        src="./assets/image/waist-up-portrait-handsome-serious-unshaven-male-keeps-hands-together-dressed-dark-blue-shirt-has-talk-with-interlocutor-stands-against-white-wall-self-confident-man-freelancer.webp" />
                 </div>
             </div>
             <div class="col-right">
