--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
 </head>
 
 <body>
+    <!-- header -->
+    <section id="header">
+        <div class="header container">
+            <div class="nav-bar">
+                <div class="brand">
+                    <a href="#hero"><h1><span>l</span> o <span>g</span> o</h1></a>
+                </div>
+                <div class="nav-list">
+                    <div class="hamburger">
+                        <div class="bar"></div>
+                    </div>
+                    <ul>
+                        <li><a href="#" data-after="Home">Home</a></li>
+                        <li><a href="#" data-after="service">Service</a></li>
+                        <li><a href="#" data-after="Project">Project</a></li>
+                        <li><a href="#" data-after="About">About</a></li>
+                        <li><a href="#" data-after="Contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end header -->
+
     <!-- Hero section -->
     <section id="hero">
         <div class="hero container">
