--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                         <div class="bar"></div>
                     </div>
                     <ul>
-                        <li><a href="#" data-after="Home">Home</a></li>
-                        <li><a href="#" data-after="service">Service</a></li>
-                        <li><a href="#" data-after="Project">Project</a></li>
-                        <li><a href="#" data-after="About">About</a></li>
-                        <li><a href="#" data-after="Contact">Contact</a></li>
+                        <li><a href="#hero" data-after="Home">Home</a></li>
+                        <li><a href="#services" data-after="service">Service</a></li>
+                        <li><a href="#projects" data-after="Project">Project</a></li>
+                        <li><a href="#about" data-after="About">About</a></li>
+                        <li><a href="#contact" data-after="Contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                 <h1>Hello, <span></span></h1>
                 <h1>My Name Is <span></span></h1>
                 <h1>Ahsan <span></span></h1>
-                <a href="#" type="Button" class="cta">Portfolio</a>
+                <a href="#projects" type="Button" class="cta">Portfolio</a>
             </div>
         </div>
     </section>
@@ -233,6 +233,8 @@
         </div>
     </section>
     <!-- end footer -->
+
+    <script src="./app.js"></script>
 </body>
 
 </html>
